--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ members = ["submod"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cargo_ice_repo_2 = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "98597ac" }
+submod2 = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "217359a" }
