--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ members = ["submod"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-binary = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "d8978f2" }
+submod = { path = "submod" }
+binary = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "b9277d8" }
