--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = ["submod"]
+members = ["submod2"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-submod = { path = "submod" }
+submod2 = { path = "submod2" }
 binary = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "bae5a90" }
